--- a/.github/workflows/daily-java-challenges.yml
+++ b/.github/workflows/daily-java-challenges.yml
@@ -52,50 +52,46 @@ jobs:
 
             TITLE="Java Coding Challenge #${i}"
 
-            cat > "$QFILE" <<'EOF'
-            # __TITLE__
+            cat > "$QFILE" <<EOF
+# ${TITLE}
 
-            ## Problem
-            Given a non-empty integer array, return the maximum difference (arr[j] - arr[i]) such that j > i.
+## Problem
+Given a non-empty integer array, return the maximum difference (arr[j] - arr[i]) such that j > i.
 
-            ## Constraints
-            - 2 <= n <= 100000
-            - -10^9 <= arr[i] <= 10^9
+## Constraints
+- 2 <= n <= 100000
+- -10^9 <= arr[i] <= 10^9
 
-            ## Example
-            Input: [7, 1, 5, 3, 6, 4]
-            Output: 5
-            Explanation: Buy at 1 and sell at 6.
+## Example
+Input: [7, 1, 5, 3, 6, 4]
+Output: 5
+Explanation: Buy at 1 and sell at 6.
 
-            ## Approach
-            Track the smallest value seen so far and compute best difference at each step.
-            EOF
-            sed -i "s/__TITLE__/${TITLE}/g" "$QFILE"
-            sed -i 's/^            //' "$QFILE"
+## Approach
+Track the smallest value seen so far and compute best difference at each step.
+EOF
 
-            cat > "$SFILE" <<'EOF'
-            package com.app;
+            cat > "$SFILE" <<EOF
+package com.app;
 
-            public class Solution___I__ {
-                public static int maxDifference(int[] arr) {
-                    int min = arr[0];
-                    int best = Integer.MIN_VALUE;
+public class Solution_${i} {
+    public static int maxDifference(int[] arr) {
+        int min = arr[0];
+        int best = Integer.MIN_VALUE;
 
-                    for (int k = 1; k < arr.length; k++) {
-                        best = Math.max(best, arr[k] - min);
-                        min = Math.min(min, arr[k]);
-                    }
-                    return best;
-                }
+        for (int k = 1; k < arr.length; k++) {
+            best = Math.max(best, arr[k] - min);
+            min = Math.min(min, arr[k]);
+        }
+        return best;
+    }
 
-                public static void main(String[] args) {
-                    int[] sample = {7, 1, 5, 3, 6, 4};
-                    System.out.println(maxDifference(sample));
-                }
-            }
-            EOF
-            sed -i "s/__I__/${i}/g" "$SFILE"
-            sed -i 's/^            //' "$SFILE"
+    public static void main(String[] args) {
+        int[] sample = {7, 1, 5, 3, 6, 4};
+        System.out.println(maxDifference(sample));
+    }
+}
+EOF
 
             git add "$QFILE" "$SFILE"
             git commit -m "feat(java-challenge): add ${DATE} challenge ${i} with solution"
